--- a/index.html
+++ b/index.html
@@ -183,12 +183,12 @@
         <div class="section-1__info m-5 d-flex justify-content-center">
           <div class="my-5 text-center">
             <p class="info__title">People</p>
-            <p class="counter text-primary-emphasis" data-target="350"></p>
+            <p class="counter text-primary-emphasis">350</p>
             <p class="info__info">Lorem ipsum dolor</p>
           </div>
           <div class="m-5 text-center">
             <p class="info__title">World Offices</p>
-            <p class="counter text-primary-emphasis" data-target="50"></p>
+            <p class="counter text-primary-emphasis">50</p>
             <p class="info__info">Sit amet consectetur</p>
           </div>
         </div>
